Fixed spinner back button bug

--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -1,3 +1,4 @@
+<div id="profile">
 <table style="width: 75%; margin: 0 auto;">
   <tr>
     <th colspan="3" style="text-align: center">Users</th>
@@ -68,3 +69,4 @@
   <% end %>
 
 </table>
+    </div>
