--- a/app/views/play/index.html.erb
+++ b/app/views/play/index.html.erb
@@ -1,5 +1,5 @@
 <div id="main" class="text-center">
-
+  <p id="notice"><%= notice %></p>
   <button style="font-family: Arcade-Classic; font-size: 1.4em; background-color: #fd5400" onclick="Refresh()" type="button" class="btn btn-primary">
     REFRESH
   </button>
