--- a/app/views/play/display_friends.html.erb
+++ b/app/views/play/display_friends.html.erb
@@ -1,72 +1,73 @@
 <div id="profile">
-<table style="width: 75%; margin: 0 auto;">
-  <tr>
-    <th colspan="3" style="text-align: center">Users</th>
-  </tr>
+  <div style="text-align:center; padding: 15px;">
+    <%= form_tag play_display_friends_path, :method => 'get' do %>
+        <p>
+          <%= email_field_tag :search, params[:search] %>
+          <%= submit_tag 'Search By Email', :name => nil, :class => 'btn' %>
+        </p>
+    <% end %>
+  </div>
+  <table style="width: 75%; margin: 0 auto;">
+    <tr>
+      <th colspan="3" style="text-align: center">Users</th>
+    </tr>
 
 
-  <% if !@user %>
+    <% if !@user %>
 
-      <h4>Friends</h4>
+        <h4>Friends</h4>
+        <% if @friends.empty? %>
+            NONE
+        <% end %>
+        <div content="center">
+          <% @friends.each do |friend| %>
+              <% if friend.present? %>
 
-      <div content="center">
-        <% @friends.each do |friend| %>
-            <% if friend.present? %>
+                  <%= image_tag friend.avatar.url, style: 'border-radius: 50%;' %>
 
-                <%= image_tag friend.avatar.url, style: 'border-radius: 50%;' %>
-
-                <%= friend.email %>
+                  <%= friend.email %>
 
 
-                <%= link_to "Delete Friend", Friendship.find_by_friend_id(friend), :method => :delete %>
+                  <%= link_to "Delete Friend", Friendship.find_by_friend_id(friend), :method => :delete %>
 
+              <% end %>
+          <% end %>
+        </div>
+
+        <% for user in @users %>
+            <% if user.id != current_user.id %>
+                <tr>
+                  <td>
+                    <%= image_tag user.avatar.url, style: 'border-radius: 50%;' %>
+                  </td>
+                  <td>
+                    <%= user.email %>
+                  </td>
+
+                  <td>
+                    <%= show_user_options(user) %>
+                  </td>
+
+                </tr>
             <% end %>
         <% end %>
-      </div>
+    <% else %>
 
-      <div style="text-align:center; padding: 15px;">
-        <%= form_tag play_display_friends_path, :method => 'get' do %>
-            <p>
-              <%= email_field_tag :search, params[:search] %>
-              <%= submit_tag 'Search By Email', :name => nil, :class => 'btn' %>
-            </p>
-        <% end %>
-      </div>
+        <tr>
+          <td>
+            <%= image_tag @user.avatar.url, style: 'border-radius: 50%;' %>
+          </td>
 
-      <% for user in @users %>
-          <% if user.id != current_user.id %>
-              <tr>
-                <td>
-                  <%= image_tag user.avatar.url, style: 'border-radius: 50%;' %>
-                </td>
-                <td>
-                  <%= user.email %>
-                </td>
+          <td>
+            <%= @user.email %>
+          </td>
 
-                <td>
-                  <%= show_user_options(user) %>
-                </td>
+          <td>
+            <%= show_user_options(@user) %>
+          </td>
+        </tr>
 
-              </tr>
-          <% end %>
-      <% end %>
-  <% else %>
+    <% end %>
 
-      <tr>
-        <td>
-          <%= image_tag @user.avatar.url, style: 'border-radius: 50%;' %>
-        </td>
-
-        <td>
-          <%= @user.email %>
-        </td>
-
-        <td>
-          <%= show_user_options(@user) %>
-        </td>
-      </tr>
-
-  <% end %>
-
-</table>
-    </div>
+  </table>
+</div>
